apps/downloads/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: media-vpn
  ports:
    - name: http
      port: 8080
      targetPort: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-access
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: media-vpn
  ports:
    - name: http
      port: 80
      targetPort: qb-access
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: media-vpn
  ports:
    - name: http
      port: 8191
      targetPort: flaresolverr
