apps/downloads/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - {name: home, namespace: traefik}
  hostnames: [qbittorrent.reza.network]
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-vpn-only
      backendRefs:
        - {name: qbittorrent-access, port: 80}
